# titans-mlops

./: .gitignore  README.md  TITANS_FINANCE_COMPREHENSIVE_GUIDE.md  cli.py  docker-compose.yml  my_mlops_journey_blog_post.md  pyproject.toml
ai_engineering/: __init__.py  test_api.py
ai_engineering/api/: Dockerfile  demo_api_usage.py  flexible_api.py  main.py  production_api.py  requirements.txt  simple_main.py
ai_engineering/api/middleware/: auth.py  rate_limit.py
ai_engineering/api/models/: __init__.py  request_schemas.py  response_schemas.py  schemas.py
ai_engineering/api/routes/: __init__.py  model_routes.py  prediction_routes.py
ai_engineering/api/services/: __init__.py  feature_service.py  model_service.py
ai_engineering/frontend/: Dockerfile  README.md  __init__.py  dashboard.py  requirements.txt  utils.py
data/: all_transactions.csv  feature_metadata.json  features_engineered.csv  sample_transaction_data.csv
data_engineering/: __init__.py
data_engineering/airflow/dags/: titans_finance_etl_dag.py  titans_finance_ml_training_dag.py
data_engineering/etl/: __init__.py  run_pipeline.py
data_engineering/etl/extractors/: __init__.py  csv_extractor.py
data_engineering/etl/loaders/: __init__.py  postgres_loader.py
data_engineering/etl/transformers/: __init__.py  transaction_transformer.py
data_engineering/warehouse/init_scripts/: 01_create_schema.sql
data_science/: __init__.py
data_science/models/: training_summary.json
data_science/models/amount_prediction/: metadata.json
data_science/models/anomaly_detection/: metadata.json
data_science/models/cashflow_forecasting/: metadata.json
data_science/models/category_prediction/: metadata.json
data_science/notebooks/: 01_data_exploration.ipynb  02_business_insights.ipynb  03_statistical_analysis.ipynb
data_science/reports/: etl_report_20250807_081638.json  etl_report_20250807_081712.json  etl_report_20250807_081735.json  etl_report_20250807_112302.json
data_science/src/: __init__.py
data_science/src/features/: __init__.py  advanced_features.py  feature_engineering.py  feature_selection.py
data_science/src/models/: __init__.py  amount_prediction.py  anomaly_detection.py  cashflow_forecasting.py  category_prediction.py  register_models.py  train.py
docs/: implementation_summary.md
docs/implementations/: MASTER_IMPLEMENTATION_GUIDE.md  data_engineering_implementation.md  data_science_implementation.md  ml_engineering_implementation.md
docs/mlflow/: mlflow_docker_setup.md  mlflow_integration.md
docs/tasks/: data_engineering_tasks.md  data_science_tasks.md  ml_engineering_tasks.md  mlops_tasks.md
mlops/: __init__.py  model_deployment.py
mlops/monitoring/pgadmin/: servers.json
scripts/: init_mlflow_models.py  register_local_models.py  test_docker_mlflow.sh
